--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "axios": "^1.8.4",
     "electron-updater": "^6.3.9",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "vue-router": "^4.5.0"
   },
